--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
 <body>
     <div class="app">
 		<header class="app-header">
-			<span style="display: flex;flex-direction: row;align-items: flex-end;">
+			<span class="fold" style="display: flex;flex-direction: row;align-items: flex-end;">
 				<div class="app-header-logo">
 					<div class="logo">
 						<span class="logo-icon">
@@ -23,7 +23,7 @@
 						</h1>
 					</div>
 				</div>
-				<span style="padding-left:10%;border-bottom: 1px solid var(--c-gray-600);"></span>
+				<span class="mobile_vanish" style="padding-left:10%;border-bottom: 1px solid var(--c-gray-600);"></span>
 				<div class="app-header-navigation">
 				<div class="tabs">
 					<span>
@@ -54,9 +54,6 @@
 				</div>
 				</div>
 			</span>
-			<div class="app-header-actions">
-				hi
-			</div>	
 		</header>
 		<div id='overwiew' style='height: 100%;'>
 		    {% include 'overwiew.html' %}
